package behavioral.observer.ca1;

import java.util.List;

public interface Observer {
    public void update(List<MonHoc>danhSach);
}
